# tinyjit

./: .gitignore  .travis.yml  JIT.hs  Main.hs  README.md  package.yaml  stack.yaml  tinyjit.cabal
src/: Assembler.hs  JIT.hs  Main.hs
