name:                tinyjit
version:             0.1.0
description:         Tiny Haskell JIT
synopsis:            Tiny Haskell JIT
homepage:            https://github.com/sdiehl/tinyjit
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
Category:            Logic
build-type:          Simple
cabal-version:       >=1.10

executable example
  main-is:            Main.hs
  other-modules:
    Assembler
    JIT

  build-depends:      
    base         >= 4.8 && <4.10,
    unix         >= 2.6 && <2.8,
    transformers >= 0.4 && <0.5,
    binary       >= 0.7 && <0.8,
    bytestring   >= 0.10 && <0.11,
    vector -any

  default-language:   Haskell2010
